<resources>
    <string name="app_name">年年卡充值</string>

    <string name="tip">提示</string>
    <string name="loading">加载中...</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="request_failed">操作失败</string>
    <string name="request_success">操作成功</string>
    <string name="init_failed">初始化失败!</string>
    <string name="session_invalid">您的登录信息已失效,请重新登录</string>
    <string name="money_unit">元</string>
    <string name="please_select">请选择</string>
    <string name="exit_tip">再按一次退出程序</string>
    <string name="logout">退出登录</string>
    <string name="logout_tip">确定退出当前账号?</string>
    <string name="submit">提交</string>
    <string name="take_photo">拍照</string>
    <string name="pick_album">相册</string>
    <string name="more">更多</string>

    <string name="home_title_recharge">充值缴费</string>
    <string name="home_title_manage">交易管理</string>
    <string name="home_title_message">消 息</string>
    <string name="home_title_profile">个人中心</string>

    <string name="phone_no">手机号</string>
    <string name="password">密 码</string>
    <string name="sms_code">验证码</string>
    <string name="get_sms">点击获取</string>
    <string name="input_phone">请输入您的手机号码</string>
    <string name="input_pass">请输入您的密码</string>
    <string name="input_sms">请输入您的验证码</string>
    <string name="login">登 录</string>
    <string name="login_sms">短信验证码登录</string>
    <string name="login_pass">密码登录</string>
    <string name="find_password">找回密码</string>
    <string name="regiser_new_acount">注册新用户</string>
    <string name="contact_service">联系客服</string>
    <string name="next">下一步</string>
    <string name="new_pass">新密码</string>
    <string name="origin_pass">原密码</string>
    <string name="confirm_pass">确认密码</string>
    <string name="register">注 册</string>
    <string name="input_new_pass">请输入新密码</string>
    <string name="input_confirm_pass">请确认密码</string>
    <string name="set_login_pass">登录密码</string>
    <string name="input_set_login_pass">请输入登录密码</string>

    <string name="tip_phone_null">请输入手机号码</string>
    <string name="tip_phone_invalid">请输入正确的手机号码</string>
    <string name="tip_pass_null">请输入密码</string>
    <string name="tip_origin_pass_null">请输入原密码</string>
    <string name="tip_sms_null">请输入验证码</string>
    <string name="tip_login_success">登录成功</string>
    <string name="tip_register_success">注册成功</string>
    <string name="tip_login_failed">登录失败</string>
    <string name="tip_register_failed">注册失败</string>
    <string name="tip_modify_pass_failed">修改密码失败</string>
    <string name="tip_modify_pass_success">修改密码成功</string>
    <string name="tip_phone_passs_error">您的手机号或密码错误,请重新输入</string>
    <string name="tip_pass_rule">6-20位，包含字母和数字</string>
    <string name="tip_pass_invalid">密码不符合规则</string>
    <string name="time_count">重发(%1$d秒)</string>
    <string name="sms_sended">验证码已发送</string>
    <string name="sms_send_failed">验证码发送失败</string>
    <string name="sms_verify_failed">验证码错误</string>
    <string name="pass_not_same">两次输入的密码不一样</string>
    <string name="reset_pass_success">重置密码成功</string>
    <string name="reset_pass_failed">重置密码失败</string>

    <string name="not_auth_tip">您还不是代理商,请先认证</string>
    <string name="go_auth">去认证</string>
    <string name="no_msg">暂无消息</string>
    <string name="recharge_mobile">手机充值</string>
    <string name="recharge_flow">流量充值</string>
    <string name="recharge_video_vip">视频会员充值</string>
    <string name="recharge_oil">油卡充值</string>
    <string name="recharge_qq">QQ专区</string>
    <string name="recharge_tel">固话充值</string>
    <string name="recharge_input_phone">请输入您的手机号码</string>
    <string name="recharge_origin_money">%1$d 元</string>
    <string name="recharge_money">售价 :%1$s 元</string>
    <string name="recharge_balance_title">余额:</string>
    <string name="recharge_balance">%1$s 元</string>
    <string name="recharge_payment">立即付款</string>
    <string name="recharge_payment1">立即支付</string>
    <string name="recharge_tip">温馨提醒:</string>
    <string name="recharge_tip_content">"\u3000\u3000"该页面由深圳市年年卡网络科技有限公司提供移动、电信、联通三网官方流量代理充流量服务。\n有问题请拨打我司客服电话: </string>
    <string name="recharge_video_tip">充值说明</string>
    <string name="recharge_video_card_tip">卡密购买说明</string>
    <string name="recharge_oil_no">请输入主卡卡号</string>
    <string name="recharge_oil_phone">请输入手机号</string>
    <string name="recharge_oil_input_money">请输入充值金额</string>
    <string name="recharge_oil_type0">中石油</string>
    <string name="recharge_oil_type1">中石化</string>
    <string name="recharge_qq_input">请输入QQ号</string>
    <string name="recharge_qq_coin_unit">Q币</string>
    <string name="recharge_qq_point_unit">Q点</string>
    <string name="recharge_qq_count">请输入数量</string>
    <string name="recharge_qq_type0">Q币充值</string>
    <string name="recharge_qq_type1">QQ包月</string>
    <string name="recharge_qq_type2">Q点充值</string>
    <string name="recharge_qq_month_type">包月服务</string>
    <string name="recharge_qq_month_count">开通月数</string>
    <string name="recharge_input_tel">请输入区号+固话号码</string>

    <string name="profile_balance">余额</string>
    <string name="profile_commission">佣金</string>
    <string name="profile_extract">提成</string>
    <string name="profile_info">个人资料</string>
    <string name="profile_auth">代理商认证</string>
    <string name="profile_rights">权益</string>
    <string name="profile_payment">支付管理</string>
    <string name="profile_service">联系客服</string>
    <string name="profile_phone">手机号</string>
    <string name="profile_phone_new">新手机号</string>
    <string name="profile_qq">QQ</string>
    <string name="profile_modify_qq_input">请输入QQ号</string>
    <string name="profile_modify_pass">修改登录密码</string>
    <string name="profile_current_phone">当前手机号</string>
    <string name="profile_auth_phone">验证</string>
    <string name="profile_modify_phone">更换手机号</string>
    <string name="profile_modify_phone_success">更换手机号成功</string>
    <string name="profile_modify_phone_failed">更换手机号失败</string>
    <string name="profile_modify_phone_tip">更改后请用新的手机号码登录</string>
    <string name="profile_auth_shop">商铺</string>
    <string name="profile_auth_person">个人</string>
    <string name="profile_auth_name">真实姓名</string>
    <string name="profile_auth_name_input">请输入真实姓名</string>
    <string name="profile_auth_id">身份证号</string>
    <string name="profile_auth_id_input">请输入身份证号</string>
    <string name="profile_auth_shop_name">店铺名称</string>
    <string name="profile_auth_shop_name_input">请输入店铺名称</string>
    <string name="profile_auth_shop_type">店铺类型</string>
    <string name="profile_auth_area">所在地区</string>
    <string name="profile_auth_area_detail">详细地址</string>
    <string name="profile_auth_area_detail_input">请输入详细地址</string>
    <string name="profile_auth_id_title">身份认证</string>
    <string name="profile_auth_shop_title">店铺认证</string>
    <string name="profile_auth_id_front">身份证正面</string>
    <string name="profile_auth_id_back">身份证背面</string>
    <string name="profile_auth_shop_front">营业执照\n或店面租赁合同</string>
    <string name="profile_auth_shop_back">店面门头照</string>
    <string name="profile_auth_upgrate">升级身份</string>
    <string name="profile_my_balance">我的余额</string>
    <string name="profile_recharge">充值</string>
    <string name="profile_cost_stander">费用标准</string>
    <string name="profile_recharge_money">支付金额</string>
    <string name="profile_recharge_money_input">请输入充值金额</string>
    <string name="profile_recharge_pass">支付密码</string>
    <string name="profile_recharge_pass_input">请输入支付密码</string>
    <string name="profile_recharge_tip">该卡本次最多可充值10,000.00元</string>
    <string name="profile_recharge_add_card">添加银行卡</string>
    <string name="profile_recharge_success">恭喜!充值成功</string>
    <string name="profile_recharge_car_type0">储蓄卡</string>
    <string name="profile_recharge_car_type1">信用卡</string>
    <string name="profile_recharged_money">充值金额</string>
    <string name="profile_payment_card">银行卡</string>
    <string name="profile_payment_modify_pass">修改支付密码</string>
    <string name="profile_bank_cards_null">您还未添加任何银行卡</string>
    <string name="profile_bank_cards_add">添加银行卡</string>
    <string name="profile_bank_cards_add_success">添加银行卡成功</string>
    <string name="profile_bank_card_tip">请绑定持卡人本人的银行卡</string>
    <string name="profile_bank_card_people">持卡人</string>
    <string name="profile_bank_card_people_tip">请输入持卡人</string>
    <string name="profile_bank_card_bank">卡行</string>
    <string name="profile_bank_card_no">卡号</string>
    <string name="profile_bank_card_no_tip">请输入银行卡卡号</string>
    <string name="profile_bank_card_phone">请输入银行预留手机号</string>
    <string name="profile_bank_card_end">尾号 </string>
    <string name="profile_bank_card_unbind">解除绑定</string>
    <string name="profile_bank_unbind_card">解绑银行卡</string>
    <string name="profile_bank_unbind_card_confirm">确定解绑银行卡?</string>
    <string name="profile_bank_unbind_card_success">解绑成功</string>
    <string name="profile_auth_agrement">同意《年年卡便民缴费平台代理协议书》</string>
    <string name="profile_auth_commited">资料已提交，请耐心等待!</string>
    <string name="profile_auth_commited_tip">审核工作日为3-5天，如有疑问可联系客服</string>

    <string name="manage_money_list">资金流水</string>
    <string name="manage_check_detail">查看明细</string>
    <string name="manage_total_income">总收入</string>
    <string name="manage_total_outcome">总支出</string>
    <string name="manage_trade_history">交易记录</string>
    <string name="manage_operation_status">经营状况</string>
    <string name="manage_degrade">我的下级</string>
    <string name="manage_degrade_commission">下级总佣金</string>
    <string name="manage_degrade_recharge">下级总充值</string>
    <string name="manage_commission">佣金管理</string>
    <string name="manage_my_commission">我的佣金</string>
    <string name="manage_my_extract">我的提成</string>

</resources>
