<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical">

    <include
        android:id="@+id/header"
        layout="@layout/inclue_header" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="20dp"
        android:text="@string/profile_bank_card_tip"
        android:textSize="@dimen/h2" />

    <View
        style="@style/divider"
        android:layout_marginTop="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_bank_card_people"
            android:textColor="@color/black"
            android:textSize="@dimen/h2" />

        <EditText
            android:id="@+id/people"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="25dp"
            android:background="@null"
            android:hint="@string/profile_bank_card_people_tip"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="@dimen/h2" />
    </LinearLayout>

    <View
        style="@style/divider"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_auth_id"
            android:textColor="@color/black"
            android:textSize="@dimen/h2" />

        <EditText
            android:id="@+id/id_no"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="25dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/profile_auth_id_input"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="@dimen/h2" />

        <ImageButton
            android:id="@+id/id_no_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:src="@mipmap/clear"
            android:visibility="gone" />
    </LinearLayout>

    <View
        style="@style/divider"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_bank_card_bank"
            android:textColor="@color/black"
            android:textSize="@dimen/h2" />

        <TextView
            android:id="@+id/bank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:background="@null"
            android:drawableRight="@mipmap/more"
            android:hint="@string/please_select"
            android:textColor="@color/black"
            android:textSize="@dimen/h2" />
    </LinearLayout>

    <View
        style="@style/divider"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_bank_card_no"
            android:textColor="@color/black"
            android:textSize="@dimen/h2" />

        <com.nnk.rechargeplatform.widget.BandCardEditText
            android:id="@+id/no"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="40dp"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/profile_bank_card_no_tip"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="@dimen/h2" />

        <ImageButton
            android:id="@+id/car_no_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:src="@mipmap/clear"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/scan_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:src="@mipmap/camera" />
    </LinearLayout>

    <View
        style="@style/divider"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_no"
            android:textColor="@color/black"
            android:textSize="@dimen/h2" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/profile_bank_card_phone"
            android:inputType="number"
            android:maxLength="11"
            android:maxLines="1"
            android:textSize="@dimen/h2" />

        <ImageButton
            android:id="@+id/clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:src="@mipmap/clear"
            android:visibility="gone" />

        <View
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:background="@color/divider" />

        <com.nnk.rechargeplatform.widget.TimerView
            android:id="@+id/get_sms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:enabled="false"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/get_sms"
            android:textColor="@color/en_disable_color"
            android:textSize="@dimen/h2" />
    </LinearLayout>

    <View
        style="@style/divider"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sms_code"
            android:textColor="@color/black"
            android:textSize="@dimen/h2" />

        <EditText
            android:id="@+id/sms_code"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="25dp"
            android:background="@null"
            android:hint="@string/input_sms"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="@dimen/h2" />
    </LinearLayout>

    <View style="@style/divider" />

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_bg"
        android:enabled="false"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="@dimen/h1" />
</LinearLayout>