<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <View style="@style/divider" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/white"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <EditText
                android:id="@+id/qq"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:background="@null"
                android:hint="@string/recharge_qq_input"
                android:inputType="number"
                android:textSize="@dimen/h1" />

            <ImageView
                android:id="@+id/clear_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/clear" />
        </RelativeLayout>

        <View
            style="@style/divider"
            android:layout_marginLeft="20dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@null"
                android:inputType="number"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:text="@string/recharge_qq_month_type"
                android:textSize="@dimen/h2" />

            <TextView
                android:id="@+id/month_type_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:drawablePadding="10dp"
                android:drawableRight="@mipmap/more"
                android:hint="@string/please_select"
                android:textSize="@dimen/h2"
                android:paddingLeft="40dp" />

        </RelativeLayout>

        <View
            style="@style/divider"
            android:layout_marginLeft="20dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@null"
                android:inputType="number"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:text="@string/recharge_qq_month_count"
                android:textSize="@dimen/h2" />

            <TextView
                android:id="@+id/month_count_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:drawablePadding="10dp"
                android:drawableRight="@mipmap/more"
                android:hint="@string/please_select"
                android:textSize="@dimen/h2"
                android:paddingLeft="40dp" />

        </RelativeLayout>

        <View
            style="@style/divider"
            android:layout_marginTop="20dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recharge_balance_title"
                android:textSize="@dimen/h2" />

            <TextView
                android:id="@+id/recharge_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/recharge_balance"
                android:textSize="@dimen/h2" />
        </RelativeLayout>

        <View style="@style/divider" />

        <Button
            android:id="@+id/pay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/btn_bg"
            android:text="@string/recharge_payment"
            android:textColor="@color/white"
            android:textSize="@dimen/h1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="20dp"
            android:text="@string/recharge_tip"
            android:textSize="@dimen/h3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:paddingBottom="30dp"
            android:text="@string/recharge_tip_content"
            android:textSize="@dimen/h3" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
